--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "strict": false,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
